Increased stack guard causes segfaults on x86-32

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 8, 9.0.4
    • Component/s: hotspot
    • None
    • b07
    • x86
    • linux

        New 64-bit Linux kernels have a default stack guard of a megabyte between the main stack and any allocated memory. 32-bit Linux x86 HotSpot allocates an executable memory region just beyond the end of the stack. When the stack grows to within a megabyte of this region the process segfaults and is killed.

              Assignee:
              Andrew Haley
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: