8197429: Increased stack guard causes segfaults on x86-32

Reviewed-by: dholmes